--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,40 @@
-_build/*
-.elixir_ls/*
-.nix-hex/*
-.nix-mix/*
-deps/*
+# The directory Mix will write compiled artifacts to.
+_build/
+
+# If you run "mix test --cover", coverage assets end up here.
+cover/
+
+# The directory Mix downloads your dependencies sources to.
+deps/
+
+# Where third-party dependencies like ExDoc output generated docs.
+doc/
+
+# Ignore .fetch files in case you like to edit your project deps locally.
+.fetch
+
+# If the VM crashes, it generates a dump, let's ignore it too.
+erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
+*.ez
+
+# Ignore package tarball (built via "mix hex.build").
+data_simulator_api-*.tar
+
+# Temporary files, for example, from tests.
+tmp/
+
+# Ignore the language server files
+.elixir_ls/
+
+# Ignore the formatter file
 .formatter.exs
-mix.lock
+
+# Ignore the nix files
+.nix-hex/
+.nix-mix/
 shell.nix
+
+# Ignore the lock file
+mix.lock
